[package]
name = "cosmwasm-vm-wasmi"
version = "0.2.0"
edition = "2021"

[features]
default = ["iterator", "stargate"]
iterator = ["cosmwasm-vm/iterator"]
stargate = ["cosmwasm-vm/stargate"]
std = ["cosmwasm-std/std"]

[dependencies]
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.127", default-features = false, features = [
	"alloc",
] }
either = { version = "1.8", default-features = false }
log = { version = "0.4.21", default-features = false }
wasmi = { version = "0.30.0", default-features = false }
wasmi-validation = { version = "0.5.0", default-features = false }
wasm-instrument = { version = "0.4.0", default-features = false }
cosmwasm-std = { workspace = true, default-features = false, features = [
	"iterator",
	"stargate",
	"cosmwasm_1_4",
] }
cosmwasm-vm = { workspace = true, default-features = false, features = [
	"iterator",
	"stargate",
] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
rand_core = { version = "0.6.4", default-features = false, features = ["alloc"] }

[dev-dependencies]
wat = "1.0"
env_logger = "0.9"
cosmwasm-crypto = { version = "2.1.3" }

cw20-ics20 = { git = "https://github.com/CosmWasm/cw-plus", default-features = false, features = [
	"library",
] }
