[package]
name = "pallet-account-alias-registry"
version = "0.1.0"
license = "GPL-3.0-or-later"

authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, package = "parity-scale-codec" }
scale-info = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
np-crypto = { workspace = true }
np-runtime = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"np-crypto/std",
	"np-runtime/std",
	"sp-runtime/std",
	"sp-std/std",
]
