[package]
name = "pallet-alias"
version = "0.1.0"
license = "GPL-3.0-or-later"

authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
np-crypto = { workspace = true }
np-runtime = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"np-crypto/std",
	"np-runtime/std",
	"sp-runtime/std",
	"sp-std/std",
]
