[package]
name = "pallet-cosmos"
version = "0.4.0"
authors = ["Haderech Pte. Ltd."]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noirhq/noir.git"
publish = false

[dependencies]
cosmos-sdk-proto = { version = "0.24", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-cosmos-x-auth-signing = { workspace = true, default-features = false }
pallet-cosmos-types = { workspace = true, default-features = false }
pallet-multimap = { workspace = true, default-features = false }
parity-scale-codec = { version = "3.6", default-features = false, features = ["derive"] }
np-cosmos = { workspace = true, default-features = false }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }

[features]
default = ["std"]
std = [
	"cosmos-sdk-proto/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-cosmos-x-auth-signing/std",
	"pallet-cosmos-types/std",
	"pallet-multimap/std",
	"parity-scale-codec/std",
	"np-cosmos/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
]
try-runtime = []
