[package]
name = "pallet-cosmos"
description = "FRAME cosmos to process Cosmos transactions"
license = "Apache-2.0"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
publish = false

[lints]
workspace = true

[dependencies]
cosmos-sdk-proto = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-cosmos-x-auth-signing = { workspace = true, default-features = false }
pallet-cosmos-types = { workspace = true, default-features = false }
pallet-multimap = { workspace = true, default-features = false }
parity-scale-codec = { workspace = true }
np-cosmos = { workspace = true, default-features = false }
scale-info = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = ["std"]
std = [
	"cosmos-sdk-proto/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-cosmos-x-auth-signing/std",
	"pallet-cosmos-types/std",
	"pallet-multimap/std",
	"parity-scale-codec/std",
	"np-cosmos/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
