[package]
name = "pallet-cosmos"
description = "FRAME cosmos to process Cosmos transactions"
license = "GPL-3.0-or-later"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
publish = false

[lints]
workspace = true

[dependencies]
cosmos-sdk-proto = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
nostd = { workspace = true }
pallet-cosmos-x-auth-signing = { workspace = true }
pallet-cosmos-types = { workspace = true }
pallet-multimap = { workspace = true }
parity-scale-codec = { workspace = true }
np-cosmos = { workspace = true }
scale-info = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = ["std"]
std = [
	"cosmos-sdk-proto/std",
	"frame-support/std",
	"frame-system/std",
	"nostd/std",
	"pallet-cosmos-x-auth-signing/std",
	"pallet-cosmos-types/std",
	"pallet-multimap/std",
	"parity-scale-codec/std",
	"np-cosmos/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
