[package]
name = "pallet-solana"
description = "FRAME solana to process Solana transactions"
license = "GPL-3.0-or-later"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
publish = false

[dependencies]
bincode = { workspace = true }
derive-where = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
nostd = { workspace = true }
np-runtime = { workspace = true }
pallet-timestamp = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_derive = { workspace = true }
solana-compute-budget = { workspace = true }
solana-program-runtime = { workspace = true }
solana-sdk = { workspace = true, features = ["full", "scale"] }
solana_rbpf = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
libsecp256k1 = { workspace = true }
pallet-balances = { workspace = true, default-features = true }
rand = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"bincode/std",
	"frame-support/std",
	"frame-system/std",
	"itertools/use_std",
	"log/std",
	"nostd/std",
	"np-runtime/std",
	"pallet-timestamp/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde/std",
	"solana-compute-budget/std",
	"solana-program-runtime/std",
	"solana-sdk/std",
	"solana_rbpf/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-timestamp/try-runtime",
]
